Fix navbar z-index

--- a/src/features/navbar/Navbar/Navbar.module.scss
+++ b/src/features/navbar/Navbar/Navbar.module.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   background-color: var(--background-color);
-  z-index: 100;
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
